fix: Remove unnecessary z-index from phone icon

--- a/frappe/public/less/controls.less
+++ b/frappe/public/less/controls.less
@@ -43,7 +43,6 @@
 	top: 4px;
 	right: 8px;
 	padding: 3px;
-	z-index: 3;
 }
 
 .markdown-preview, .html-preview {
